[package]
name = "logion_contract_pkg"
version = "1.0.0"
edition = "2021"
authors = ["Logion Team <team@logion.network>"]

[dependencies]

ink = { version = "4.3.0", default-features = false }
ink_env = { version = "4.3.0", default-features = false }
ink_prelude = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
